--- a/style.css
+++ b/style.css
@@ -1,57 +1,63 @@
-*{
+* {
     box-sizing: border-box;
 }
-body{
+
+body {
     font-family: "Karla", sans-serif;
     margin: 0;
 }
-main{
-    padding:36px;
-}
-.header{
-    display:flex;
-    align-items:center ;
-    height:140px;
-    background: linear-gradient(90deg, #672280 1.18%, #A626D3 100%);
-    color:white ;
-    padding:40px;
+
+main {
+    padding: 36px;
 }
 
-.header-image{
+.header {
+    display: flex;
+    align-items: center;
+    height: 65px;
+    background: linear-gradient(90deg, #672280 1.18%, #A626D3 100%);
+    color: white;
+    padding: 20px;
+}
+
+.header--image {
     height: 100%;
     margin-right: 6px;
 }
-.header--title{
-    margin-left: 10px;
-    font-size: 2rem;
+
+.header--title {
+    font-size: 1.25rem;
     margin-right: auto;
 }
-.header-project{
-    font-size: 1.5rem;
+
+.header--project {
+    font-size: 0.75rem;
     font-weight: 500;
 }
 
-.form{
+.form {
     display: grid;
-    grid-template: 100% 100%/ 1fr 1fr;
-    gap:17px;
+    grid-template: 40px 40px / 1fr 1fr;
+    gap: 17px;
 }
 
-.form--input{
+.form--input {
     font-family: "Karla", sans-serif;
-    border-radius:5px;
-    border: 1px solid;
-    text-indent:5px; 
-    height:35px;
-    width: 100%;
+    border-radius: 5px;
+    border: 1px solid #D5D4D8;
+    text-indent: 5px;
 }
-.form--button{
+
+.form--button {
+    grid-column: 1 / -1;
     font-family: "Karla", sans-serif;
-    font-size: 1rem;
-    grid-column: 1/-1;
     border-radius: 5px;
     background: linear-gradient(90.41deg, #711F8D 1.14%, #A818DA 100%);
-    color:white;
-    border:none;
-    cursor:pointer;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+.meme--image{
+    max-width: 100%;
 }
